fix picture on safari

--- a/src/components/About/styles/style.css
+++ b/src/components/About/styles/style.css
@@ -8,6 +8,8 @@
 .about-image {
   border-radius: 50%;
   width: 25ch;
+  z-index: 0;
+  position: relative;
 }
 
 .about-description {
